<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="left"
    android:padding="20dp">

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name_text_View"/>
    <EditText
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:id="@+id/contactNameEditTextBox"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_phone_label"/>
        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/contactPhoneTextBox"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_email_label"/>
        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/contactEmailTextBox"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_address_label"/>
        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/contactAddressTextBox"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other: "/>
        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/contactOtherTextBox"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_go_back"
        android:onClick="onSaveContactInfo"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactCancel"
            android:onClick="onCancelContactInfo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPreviousActivity"
            android:text="@string/textPreviousActivity"/>


    </LinearLayout>

</LinearLayout>
